--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portafolio profesional de Luis Avilez, desarrollador en formación">
     <title>Portafolio Web - Luis Avilez | Desarrollador en Formación</title>
-    <link rel="shortcut icon" href="img/icon/iconoprincipal.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/icon/iconoprincipal.png" type="image/x-icon">
 </head>
 <body>
     <!-- Cabecera principal del sitio -->
     <header>
         <div>
             <figure>
-                <img src="img/avatar.png" alt="Foto de perfil de Luis Avilez" width="150" height="200">
+                <img src="/img/avatar.png" alt="Foto de perfil de Luis Avilez" width="150" height="200">
                 <figcaption>Luis Avilez</figcaption>
             </figure>
             <h1>Portafolio Web de <mark>Luis Fernando Avilez Cevallos</mark></h1>
             <p>"Creando experiencias, no solo proyectos"</p>
         </div>
     </header>
-<hr/>
+
     <!-- Navegación principal -->
     <nav>
         <ul>
@@ -70,50 +70,55 @@
         <section id="habilidades" >
             <h2 >Habilidades Técnicas</h2>
             <div>
-                <table border="1" >
-                    <caption>Nivel de habilidades técnicas de Luis Avilez</caption>
-                    <thead>
-                        <tr>
-                            <th >Categoría</th>
-                            <th >Habilidad</th>
-                            <th >Nivel</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th  rowspan="3">Lenguajes</th>
-                            <td>JavaScript</td>
-                            <td>Básico</td>
-                        </tr>
-                        <tr>
-                            <td>Python</td>
-                            <td>Básico</td>
-                        </tr>
-                        <tr>
-                            <td>Java</td>
-                            <td>Intermedio</td>
-                        </tr>
-                        <tr>
-                            <th  rowspan="2">Frontend</th>
-                            <td>HTML5</td>
-                            <td>Básico</td>
-                        </tr>
-                        <tr>
-                            <td>CSS3</td>
-                            <td>Básico</td>
-                        </tr>
-                        <tr>
-                            <th >Herramientas</th>
-                            <td>Git/GitHub</td>
-                            <td>Básico</td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="3"><small><em>Actualizado: <time>Mayo 2025</time> | Niveles: Básico, Intermedio, Avanzado</em></small></td>
-                        </tr>
-                    </tfoot>
-                </table>
+               <table border="1">
+  <caption>Nivel de habilidades personales de Luis Avilez</caption>
+  <thead>
+    <tr>
+      <th>Categoría</th>
+      <th>Habilidad</th>
+      <th>Nivel</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th rowspan="3">Comunicación</th>
+      <td>Escucha activa</td>
+      <td>Avanzado</td>
+    </tr>
+    <tr>
+      <td>Oratoria</td>
+      <td>Intermedio</td>
+    </tr>
+    <tr>
+      <td>Empatía</td>
+      <td>Avanzado</td>
+    </tr>
+    <tr>
+      <th rowspan="2">Trabajo en equipo</th>
+      <td>Colaboración</td>
+      <td>Avanzado</td>
+    </tr>
+    <tr>
+      <td>Resolución de conflictos</td>
+      <td>Intermedio</td>
+    </tr>
+    <tr>
+      <th rowspan="2">Gestión personal</th>
+      <td>Organización</td>
+      <td>Avanzado</td>
+    </tr>
+    <tr>
+      <td>Adaptabilidad</td>
+      <td>Avanzado</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <td colspan="3"><small><em>Actualizado: <time>Mayo 2025</time> | Niveles: Básico, Intermedio, Avanzado</em></small></td>
+    </tr>
+  </tfoot>
+</table>
+
             </div>
         </section>
 
@@ -123,13 +128,12 @@
             <figure>
                 <figcaption>Escucha mi presentación en audio:</figcaption>
                 <audio controls>
-                    <source src="audio/audiopresentacion_Audio Denoise.mp3" type="audio/mpeg">
-                    Tu navegador no soporta el elemento de audio.
+                    <source src="/audio/audiopresentacion_Audio Denoise.mp3" type="audio/mpeg">
                 </audio>
             </figure>
         </section>
     </main>
-<hr/>
+
     <!-- Pie de página -->
     <footer id="contacto">
         <h2>Contacto</h2>
