--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portafolio profesional de Luis Avilez, desarrollador en formación">
     <title>Portafolio Web - Luis Avilez | Desarrollador en Formación</title>
-    <link rel="shortcut icon" href="/img/icon/iconoprincipal.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icon/iconoprincipal.png" type="image/x-icon">
 </head>
 <body>
     <!-- Cabecera principal del sitio -->
     <header>
         <div>
             <figure>
-                <img src="/img/avatar.png" alt="Foto de perfil de Luis Avilez" width="150" height="200">
+                <img src="img/avatar.png" alt="Foto de perfil de Luis Avilez" width="150" height="200">
                 <figcaption>Luis Avilez</figcaption>
             </figure>
             <h1>Portafolio Web de <mark>Luis Fernando Avilez Cevallos</mark></h1>
@@ -128,7 +128,7 @@
             <figure>
                 <figcaption>Escucha mi presentación en audio:</figcaption>
                 <audio controls>
-                    <source src="/audio/audiopresentacion_Audio Denoise.mp3" type="audio/mpeg">
+                    <source src="audio/audiopresentacion_Audio Denoise.mp3" type="audio/mpeg">
                 </audio>
             </figure>
         </section>
