--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Cabecera principal del sitio -->
-    <header>
+    <header id="irarriba">
         <div>
             <figure>
                 <img src="img/avatar.png" alt="Foto de perfil de Luis Avilez" width="150" height="200">
@@ -180,7 +180,7 @@
             </form>
         </section>
     </main>
-
+     <a href="#irarriba">🔼 ir hacia arriba</a>
     <!-- Pie de página -->
     <footer id="contacto">
         <h2>Contacto</h2>
