--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Portafolio profesional de Luis Avilez, desarrollador en formación">
     <title>Portafolio Web - Luis Avilez | Desarrollador en Formación</title>
     <link rel="shortcut icon" href="img/icon/iconoprincipal.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Cabecera principal del sitio -->
